pbft article writting

--- a/_posts/2019-06-21-pbft.md
+++ b/_posts/2019-06-21-pbft.md
@@ -14,8 +14,8 @@ featured: false
 published: true
 ---
 
-In the past one and half months, I have been working on consensus protocol, especially view change protocol. This is one of the core parts in any blockchain project, from which we can tell whether a blockchain is permissioned or permissionless and how decentralized it is. The consensus code is here: [harmony/consensus](https://github.com/harmony-one/harmony/tree/master/consensus). Our testnet contains $$4$$ shards, with $$100$$ nodes per shard with total of $$400$$ validators right now. It
-is running smoothly, and we observed view change (i.e. leader change) happened in some shards due to network condition. I also manually triggered view change by killing the leader node as well as other kinds of attack factors. The view change happened after the attack and the network is still keep going, yeah! In the following, I will first explain the basic concepts of byzantine fault tolarent, then how do we improve it to handle large number of nodes in practice, and finally I will explain overall code structure and some implementation details.
+In the past one and a half months, I have been working on consensus protocol, especially view change protocol. This is one of the core parts in any blockchain project, from which we can tell whether a blockchain is permissioned or permissionless and how decentralized it is. The consensus code is here: [harmony/consensus](https://github.com/harmony-one/harmony/tree/master/consensus). Our mainnet $$v0$$ is launched with a total of $$600$$ nodes, it contains $$4$$ shards, with $$150$$ nodes per shard. It
+is running smoothly. In our previous tests, we observed view change (i.e. leader change) happened in some shards due to bad network condition. I also manually triggered view change by killing the leader node as well as other kinds of attack factors. The view change happened after the attack and the network is still keep going as expected, yeah! In the following, I will first explain the basic concepts of byzantine fault tolerant, then how do we improve it to handle large number of nodes in practice, and finally I will explain overall code structure and some implementation details.
 
 <section id="table-of-contents" class="toc">
   <header>
@@ -27,21 +27,21 @@ is running smoothly, and we observed view change (i.e. leader change) happened i
 </div>
 </section><!-- /#table-of-contents -->
 
-## What is Practical Byzantine Fault Tolerance
+## What is Byzantine Fault Tolerance
 
-In a distributed system, assume each node is an independent server and they are communicating with each other by sending messages over the network. There are two properties we want the system to maintain: consistency and liveness. In blockchain terminology, Consistency means the honeset node must commit the same block during consensus process; liveness means the chain must keep growing without stuck at some block height. If we are in a permissioned network, this is easier to achieve. For
-example, we can pick one node as leader and other nodes will just listen to what the leader broadcast and trust the block the leader proposed. However, even in this case, we need take care of the situation where the leader server is down or has data corruption. For a fully decentralized network, we cannot trust any single node. Any node can be malicious in the sense that it can do arbitrary bad things to harm the system. e.g. It can delay or refuse to relay the messages in the network. It
-can propose invalid block (if its role is leader). It can send different messages to different peers. Even worse, the malicious nodes can also collabrate with each other to do bad things. There is only one fundamental assumption we will assume, that is a malicious node cannot forge the signatures other nodes signed. This is gauranteed by cryptogrphy theory, where the difficulty of forge a signature is so high that no computer today can break in any practical time. Things might change when the quantum computer is out. But at that time, we will have quantum-resistent
+A distributed system consists of multiple nodes, where assume each node is an independent server and they are communicating with each other by sending messages over the network and perform some tasks according to the protocol they conform. The longer the system runs, the higher chance that there are fault occurs in the nodes in the system. There are many possible causes of fault. One kind of fault is node crash, network down, packet loss etc, where the node had no malicious intention, they are Non-Byzantine fault. Another kind is that a node can be malicious, it can act arbitrarily and not follow the rules of the protocol. Also malicious nodes can work together according to different protocol. With all the possible faults in mind, there are two properties we want the system to maintain: consistency and liveness. In blockchain terminology, consistency means the honest node must commit the same block during consensus process; liveness means the chain must keep growing without stuck. In a permissioned network condition, this is easier to achieve. For
+example, we can pick one powerful node as leader and all the other nodes will just listen to what the leader broadcast and trust any block the leader proposes. Even in this case, we need take care of the first kind of fault, i.e. where the leader server is down or network is cutoff. For a fully decentralized network, we cannot trust any single node. Any node can be malicious and it can do arbitrary things to harm the system. e.g. It can delay or refuse to relay the messages in the network. It
+can propose invalid block (if its role is leader). It can send different messages to different peers. Even worse, the malicious nodes can also collaborate with each other to do bad things. There is only one fundamental assumption we will assume, that is a malicious node cannot forge the signatures other nodes signed. This is guaranteed by cryptography theory, where the difficulty of forging a signature is so high that no computer today can break in any practical time. Things might change when the quantum computer is out. But at that time, we will have quantum-resistant
 cryptographic algorithm.
 
-A Byzantine Fault Tolerant protocol is a protocol that can gaurantee the consistency and liveness of the distributed system even there are malicious nodes in the system. All such protocol have basic assumption that the number of malicious node be less than some threshold. This is easy to understand, if there are over $$50\%$$ malicious nodes, then majority vote is fully controled by the malicious nodes. In the case of prove of work
-(PoW) in bitcoin, the requirement is less than $$50\%$$ of nodes (in the computation power sense) are malicious. However, the selfish mining makes the basic assumption lower to $$25\%$$. i.e. the system of PoW will be safe only if less than $$25\%$$ of nodes (in the sense of computation power) are malicious. There are a lot research on Byzantine Fault Tolerance prtocol in traditional distributed system area. It is proven that the malicious nodes should be less than $$33\%$$ in the classical paper of [lamport](https://people.eecs.berkeley.edu/~luca/cs174/byzantine.pdf). Later on, the famous practical byzantine fault
-tolerance paper [PBFT](http://pmg.csail.mit.edu/papers/osdi99.pdf) make such system practical in use. There are still two remaining issues. First, such a system is permissioned, which not allow arbitrary node leave and join. Second, it is not scalable to more than hundreds of nodes. The first issue is due to the Sibil attack, where a malicious user can easily fake a lot of fake identities and take over the majority of the network. This issue is solved
-in Satoshi Nakamoto's bitcoin whitepaper, where the economic effect is taken into consideration. After proof of work (PoW), there are bunch of new designs such as proof of stake (PoS), proof of authority (PoA) etc. Instead of counting the number of nodes, we counting number of voting power. In PoS, the voting power of a node is proportional to its staking amount.
+A Byzantine Fault Tolerant protocol is a protocol that can guarantee the consistency and liveness of the distributed system even there are malicious nodes in the system. All such protocol have basic assumption that the number of malicious node be less than some threshold. This is easy to understand, if there are over $$50\%$$ malicious nodes, then majority vote is fully controlled by the malicious nodes. In the case of prove of work
+(PoW) in bitcoin, the requirement is less than $$50\%$$ of nodes (in the computation power sense) are malicious. However, the selfish mining makes the basic assumption lower to $$25\%$$. i.e. the system of PoW will be safe only if less than $$25\%$$ of nodes (in the sense of computation power) are malicious. There are a lot of research on Byzantine Fault Tolerance protocol in traditional distributed system area. It is proven that the malicious nodes should be less than $$33\%$$ in the classical paper of [lamport](https://people.eecs.berkeley.edu/~luca/cs174/byzantine.pdf). Later on, the famous practical byzantine fault
+tolerance paper [PBFT](http://pmg.csail.mit.edu/papers/osdi99.pdf) make such system practical in use. There are still two remaining issues. First, such a system is permissioned, which not allow arbitrary nodes leave and join. Second, it is not scalable to more than hundreds of nodes. The first issue is due to the Sibil attack, where a malicious user can easily fake a lot of fake identities and take over the majority of the network. The first issue is first solved
+in Satoshi Nakamoto's bitcoin whitepaper, where the economic effect is taken into consideration. After proof of work (PoW), there are a bunch of new designs such as proof of stake (PoS), proof of authority (PoA) etc. Instead of counting the number of nodes, we counting number of voting power. In PoS, the voting power of a node is proportional to its staking amount. The second issue is solved by aggregated signatures using BLS signature scheme which is explained in later section.
 
-### PBFT
+## Practical Byzantine Fault Tolerance
 
-Our protocol is based and modified upon Practical Byzantine Fault Tolerance Protocol. We will always assume there are $$N$$ nodes with at most $$f$$ malicious nodes, where $$N = 3f+1$$. There are two modes in the PBFT, the normal consensus (Normal) mode and the view changing (ViewChanging) mode. The normal mode looks like this:
+For protocols like Raft and Paxos, they are used to deal with first kind of system faults. Practical Byzantine Fault Tolerance (PBFT) is one of the first Byzantine fault tolerance protocols used in the real world to deal with both first and second kinds of faults. We will always assume there are $$N$$ nodes with at most $$f$$ malicious nodes, where $$N = 3f+1$$. There are two modes in the PBFT, the normal consensus (Normal) mode and the view changing (ViewChanging) mode. The normal mode looks like this:
 
 <figure>
  <a href="{{ site.url }}/images/gallery1/pbft-algorithm-communication-visual.png"><img src="{{ site.url }}/images/gallery1/pbft-algorithm-communication-visual.png"></a>
@@ -57,10 +57,9 @@ In blockchain, the client request and reply can be ignored. There are basically 
 Notice that there are some differences between general PBFT and blockchain PBFT. Besides there is no client request/reply, a major difference is that the blockchain is "synchronized" between two blocks, i.e. we cannot proceed to commit block $$h+1$$ before commit $$h$$. In the traditional PBFT usecase in the distributed system, we can commit client request $$h+1$$ before request $$h$$. The PBFT will gaurantee the consistency accross all the nodes. In this sense, the blockchain
 makes consensus process simpler. To be precise, there is a process in PBFT called checkpoint, a checkpoint is a certificate that all the information with sequence number (in blockchain, it is the block number) less or equal than checkpoint's sequence number are finalized. In blockchain, each committed block is finalized and can be viewed as a checkpoint.
 
-When a leader is malicious or has long network delay, the validators will propose view change (i.e. leader change). Otherwise the whole network will stuck. View change gaurantees the liveness of the network. During the view change process, we need make sure the block committed is consistency across view change as well. Simply speaking, the $$2f+1$$ prepare messages only ensure the consistency in the same view. The $$2f+1$$ commit messages ensure the consistency accross different views. I
-will explain more detail of view change process in later section.
+When a leader is malicious or has long network delay, the validators will propose view change (i.e. leader change). Otherwise the whole network can be stuck by the leader. View change gaurantees the liveness of the network. During the view change process, we need make sure the block committed is consistency across view change as well. Simply speaking, the $$2f+1$$ prepare messages only ensure the consistency in the same view. The $$2f+1$$ commit messages ensure the consistency accross different views.
 
-## What is Fast Byzantine Fault Tolerance
+## Fast Byzantine Fault Tolerance
 
 From previous plot, we can see the total message size a node sends or receives in each round of consensus is $$O(N^2)$$. This is because in prepare and commit phases, every node needs collect $$2f+1=O(N)$$ signatures and broadcast them to every node (i.e. $$O(N)$$ nodes) in network. In Harmony, we use the Boneh–Lynn–Shacham (BLS) signature scheme to aggregated the $$2f+1$$ signatures into one signature, this way the message size in prepare and commit phases are $$O(1)$$, which reduces the
 total size from $$O(N^2)$$ to $$O(N)$$ in one round. To benefit from BLS scheme, every validator will send prepare and commit message to leader only and the leader is responsible to collect enought $$>=2f+1$$ signatures and aggregated them into one aggregated signature, after that the leader send the prepared/committed message in prepare/commit phase respectively. From the leader's perspective, the three phases are synchronized, but from validators' point of view, they can still receive
@@ -70,12 +69,12 @@ messsages out of order, e.g. a validator can receive prepared message before ann
   <a href="{{ site.url }}/images/gallery1/fbft-normal.png"><img src="{{ site.url }}/images/gallery1/fbft-normal.png"></a>
 </figure>
 
-### BLS signature scheme explained
+### BLS signature scheme
 
 The BLS signature scheme is based on elliptic curve pairing. (To Be Continued)
 
-## How Consensus cooperates with State Syncing
+### How Consensus cooperates with State Syncing
 
 (To Be Continued)
 
-## View Change Explained
+### View Change
