minor modification of old posts

--- a/_posts/2009-02-08-dushi1.md
+++ b/_posts/2009-02-08-dushi1.md
@@ -2,7 +2,7 @@
 layout: post
 title: 读史笔记一
 description: '读史可以明智'
-? headline
+headline:
 categories: history
 tags: [历史]
 
@@ -13,9 +13,7 @@ featured: false
 published: true
 ---
 
-名字叫做读史笔记，有点名不符实。一，我文言文水平不佳，二，又懒惰不愿意去啃大部头的史书。因此，很多人物故事都是我以往东看西看别人的翻译啊史评啊等等，凭印象记录下来的。这个笔记严格上还不如说成是读史翻译笔记。当然会被方家鄙视，不过自娱自乐也未尝不可。然而既然是历史，当然就不能乱来，因此我写一个故事一定就要找到资料的真实来源，不然就不是历史了。不过我文笔不行，希望大家可以忍受。
-
-其实中学我对历史并不太感兴趣。原因是因为老是要求我们背年代，背意义。我对历史感兴趣的地方是那些人，那些事。子在川上曰：逝者如斯夫，不舍昼夜。这形容历史最恰当不过了。历史往往以相似性不断地重复着，时间并不重要，从中我们看到了天地间的因果规律。而且不论生前多么的显赫一时，或者贫困艰辛，死后不过荒冢一堆罢。搞那些陵墓也不过劳民伤财，空无益处。唯一留下来的，是那些人性的光辉和传奇的故事，虽然经过千百年后直到今天，我们后人读来都不禁为之动容。我想这兴许就是历史的魅力吧
+记得中学时候我对历史并不太感兴趣。原因是因为老是要求我们背年代，背意义。我对历史感兴趣的地方是那些人，那些事。子在川上曰：逝者如斯夫，不舍昼夜。这形容历史最恰当不过了。历史往往以相似性不断地重复着，时间并不重要，从中我们看到了天地间的因果规律。而且不论生前多么的显赫一时，或者贫困艰辛，死后不过荒冢一堆罢。搞那些陵墓也不过劳民伤财，空无益处。唯一留下来的，是那些人性的光辉和传奇的故事，虽然经过千百年后直到今天，我们后人读来都不禁为之动容。我想这兴许就是历史的魅力吧
 。
 
 开篇第一章，是关于孔子弟子—子路的故事。孔子对中国文化的影响真是已经深入到各个方面了。虽然现代很多人对其有误解，这个误解不难攻破。只要去看看论语等原文就明白了。不过历史上，孔子的学说被有意或者无意的曲解倒是不少，被沦为统治者工具也是常有的事情。所以最好还是自己看看原文，而不去看别人怎么说。据说，真正有德行的人，能福荫子孙，能够传很多代。比如，孔子，范仲淹的后代都传到了今天。我研究生时候，浙大一位数学老师就是孔子后代，我还专门问过他，他确实是孔子第 77（或 76）代子孙，令人叹为观止。 仲由，字子路。性格刚烈爽直，勇武过人。因此，孔子早就断言过，子路不会寿终。“若由也，不得其死然。”子路是死于卫国父子争位。这个父子之争比较搞笑，不是子要争父位，而是父要争子位。蒉聩为了争夺王位，和卫大夫孔悝勾结作乱，他儿子卫出公（这个出字用的好）逃往鲁国。此时，在外面的子路听到了，赶紧回到卫都城，在城外碰到子羔。子羔说，城门已闭，你可以回去了，不要白白送命。此时，叛乱已经成功，这个时节，于情于理子路都可以回去了。然而子路没有逃避，他认为君子应该见危授命。于是子路想法潜入城中。看到蒉聩和孔悝正在台上。子路不能对蒉聩（原来的太子）做什么，因此，子路请蒉聩杀了作乱的孔悝，蒉聩当然不答应。于是众人一拥而上，子路虽然英勇也寡不敌众，身受重伤，帽子带子也被打断了。子路认为儒者之死应该整其衣冠，于是临命终时，戴好帽子，整理好衣服，从容而死。一个人大限将至，仍然保持从容不迫，真的不容易。以前子路最怕听到孔子的话，因为他怕听了自己却做不到。可见这不是偶然的。孔子当时听到卫国出事时就知道子路恐怕命不保了。后来子路死的消息传来，孔子不禁痛哭。子路可以说是孔子最喜欢的学生之一，他敢于和孔子辩论，有时还顶撞孔子。不到一年，孔子也死去了。孔子享年 73 岁，而子路只比孔子小九岁。由此我们可以推断出子路死的时候至少六十多了。一个六十多的老人无畏的行为真是令人不甚感慨。
